Draft of sheepdog support for nova disks
- Currently supports booting from a sheepdog virtual disk image (vdi)
  that already exists in glance. This requries the glance store to be
  sheepdog. Once the image is cloned for the VM, it is resized to fit
  the flavor.

- Cleanup works as expected.

TODO(scott-devoid):

- Test disk.local and disk.config support.
- Get snapshots to work.
- Get live migrations to work.

--- a/etc/nova/rootwrap.d/compute.filters
+++ b/etc/nova/rootwrap.d/compute.filters
@@ -209,3 +209,4 @@ rpc.mountd: CommandFilter, rpc.mountd, root
 
 # nova/virt/libvirt/utils.py:
 rbd: CommandFilter, rbd, root
+dog: CommandFilter, dog, root
