Support Sheepdog image backend for nova disks
- Supports booting from a Sheepdog virtual disk image (vdi)
  that already exists in Glance. This requries the Glance store to be
  sheepdog. Once the image is cloned for the VM, it is resized to fit
  the flavor.

- Cleanup works as expected.

TODO(scott-devoid):
- Test disk.local and disk.config support.
- Get snapshots to work.
- Get live migrations to work.

Change-Id: If06a80cb9de83372571cc737cfa73c8cb13aa29d

--- a/etc/nova/nova.conf.sample
+++ b/etc/nova/nova.conf.sample
@@ -2935,6 +2935,16 @@
 # Deprecated group/name - [DEFAULT]/libvirt_snashot_compression
 #snapshot_compression=false
 
+# Prefix for instance names for sheepdog backend. (string
+# value)
+#images_sheepdog_instance_prefix=instance_
+
+# IP for sheepdog service. (string value)
+#images_sheepdog_host=localhost
+
+# Port for sheepdog service. (integer value)
+#images_sheepdog_port=7000
+
 
 #
 # Options defined in nova.virt.libvirt.vif
